--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 					<div class="col-lg-2 col-md-9 col-sm-6 col-xs-9 col-lg-push-7">
 						<div class="phone-wrap">
 							<div class="phone">+7 (495) 00-99-56</div>
-							<a href="#" class="button toggle-mnu hidden-lg">\\\</a>
+							<a href="#" class="button toggle-mnu hidden-lg"><span></span></a>
 						</div>
 					</div>
-					<div class="col-md-7 col-lg-pull-2">
+					<div class="col-lg-7 col-md-12 col-lg-pull-2">
 						<nav class="main-mnu">
 							<ul>
 								<li class="active"><a href="#">Главная</a></li>
