--- a/index.html
+++ b/index.html
@@ -70,6 +70,43 @@
 			</div>
 		</div>
 
+		<div class="header-wrap">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8">
+						<div class="header-left">
+							<h1>Armata Financical Group</h1>
+							<ul>
+								<li><a href="#">Независимая оценка имущества</a></li>
+								<li><a href="#">Сделка слияния и поглащения</a></li>
+								<li><a href="#">Бухгалтерские услуги</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<form class="forms">
+							<h4>Заявка:</h4>
+							<p>Оставьте заявку и мы свяжемся с вами в течение 15 минут в рабочее вермя с 10:00 до 18:00 с пт-пт.</p>
+							<label>
+								<span>Ваше имя:</span>
+								<input type="text" name="name" required>
+							</label>
+							<label>
+								<span>Ваш телефон:</span>
+								<input type="text" name="phone" required>
+							</label>
+							<div class="button-wrap">
+								<button class="buttons">Отправить</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="arrow-wrap">
+			<div class="arrow-bottom"></div>
+		</div>
+
 	</header>
 
 	<div class="hidden"></div>
