--- a/index.html
+++ b/index.html
@@ -109,6 +109,25 @@
 
 	</header>
 
+	<section class="homesect">
+		
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="section-head">
+						<h2>Независимая оценка имущества</h2>
+						<p><strong>Определение рыночной стоимости</strong> любого актива, или <a href="#">оценка</a> - это первый этап всех рыночных отношений. Оценка заключается в объективном анализе объекта с целью придания ему стоимостных характеристик выраженых в едином денежном эквиваленте.</p>
+					</div>	
+				</div>
+			</div>
+		</div>
+
+		<div class="section-bottom">
+			<a href="#" class="buttons">Заказать оценку</a>
+		</div>
+
+	</section>
+
 	<div class="hidden"></div>
 
 	<!--[if lt IE 9]>
