--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 	</header>
 
-	<section class="homesect">
+	<section class="homesect section_1">
 		
 		<div class="container">
 			<div class="row">
@@ -118,6 +118,72 @@
 						<h2>Независимая оценка имущества</h2>
 						<p><strong>Определение рыночной стоимости</strong> любого актива, или <a href="#">оценка</a> - это первый этап всех рыночных отношений. Оценка заключается в объективном анализе объекта с целью придания ему стоимостных характеристик выраженых в едином денежном эквиваленте.</p>
 					</div>	
+				</div>
+			</div>
+		</div>
+		<div class="section-content">
+			<div class="container ">
+				<div class="row">
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка ценных бумаг</a></h4>
+							<p>Определение рыночной стоимости ценных бумаг и документов</p>
+						</div>
+					</div>
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка бизнеса и предприятий</a></h4>
+							<p>Профессиональная оценка бизнес-активов предприятия</p>
+						</div>
+					</div>
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка недвижимости</a></h4>
+							<p>Профессиональная оценка жилого и нежилого имущества</p>
+						</div>
+					</div>
+
+					<div class="col-sm-8 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка машин и оборудования</a></h4>
+							<p>Профессиональная оценка машин и оборудования для бизнеса</p>
+						</div>
+					</div>
+
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка инвестиционных проектов</a></h4>
+							<p>независимая оценка бизнес проектов любого направления</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="s1-bottom-triangle">
+				<img class="triangle-logo" src="img/logo_triangle.svg" alt="Armata Financical Group">
+				<img class="scales hidden-xs" src="img/icons/section_1/scales.svg" alt="Scales">
+			</div>
+		</div>
+		<div class="s1_bottom">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка нематериальных активов</a></h4>
+							<p>Определение стоимости нематериальных активов различных видов</p>
+						</div>
+					</div>
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка себестоимости продукции</a></h4>
+							<p>Определение себестоимости продукции производства</p>
+						</div>
+					</div>
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Бизнес-планирование и оценка</a></h4>
+							<p>Разработка бизнес-плана и оценка его эффективности</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
