--- a/index.html
+++ b/index.html
@@ -313,6 +313,89 @@
 
 	</section>
 
+		<section class="homesect s_dark section_3">
+		
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="section-head">
+						<h2>Независимая оценка имущества</h2>
+						<p><strong>Определение рыночной стоимости</strong> любого актива, или <a href="#">оценка</a> - это первый этап всех рыночных отношений. Оценка заключается в объективном анализе объекта с целью придания ему стоимостных характеристик выраженых в едином денежном эквиваленте.</p>
+					</div>	
+				</div>
+			</div>
+		</div>
+		<div class="section-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка ценных бумаг</a></h4>
+							<p>Определение рыночной стоимости ценных бумаг и документов</p>
+						</div>
+					</div>
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка бизнеса и предприятий</a></h4>
+							<p>Профессиональная оценка бизнес-активов предприятия</p>
+						</div>
+					</div>
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка недвижимости</a></h4>
+							<p>Профессиональная оценка жилого и нежилого имущества</p>
+						</div>
+					</div>
+
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка машин и оборудования</a></h4>
+							<p>Профессиональная оценка машин и оборудования для бизнеса</p>
+						</div>
+					</div>
+
+					<div class="col-sm-4 s3-img-wrapper">
+						<div class="s3-img-wrap img-wrap">
+							<img src="img/icons/section_3/folder.svg" alt="Folder">
+						</div>
+					</div>
+
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка инвестиционных проектов</a></h4>
+							<p>независимая оценка бизнес проектов любого направления</p>
+						</div>
+					</div>
+
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка ценных бумаг</a></h4>
+							<p>Определение рыночной стоимости ценных бумаг и документов</p>
+						</div>
+					</div>
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка бизнеса и предприятий</a></h4>
+							<p>Профессиональная оценка бизнес-активов предприятия</p>
+						</div>
+					</div>
+					<div class="col-sm-4 info-item-wrap">
+						<div class="info-item">
+							<h4><a href="#">Оценка недвижимости</a></h4>
+							<p>Профессиональная оценка жилого и нежилого имущества</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="section-bottom">
+			<a href="#" class="buttons">Заказать бухгалтерские услуги</a>
+		</div>
+
+	</section>
+
 	<div class="hidden"></div>
 
 	<!--[if lt IE 9]>
