--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
 	</section>
 
-		<section class="homesect s_dark section_3">
+	<section class="homesect s_dark section_3">
 		
 		<div class="container">
 			<div class="row">
@@ -330,27 +330,27 @@
 				<div class="row">
 					<div class="col-sm-4 info-item-wrap">
 						<div class="info-item">
-							<h4><a href="#">Оценка ценных бумаг</a></h4>
-							<p>Определение рыночной стоимости ценных бумаг и документов</p>
+							<h4><a href="#">Документальное оформление</a></h4>
+							<p>Документальное оформление всех хозяйственных операций предприятия</p>
 						</div>
 					</div>
 					<div class="col-sm-4 info-item-wrap">
 						<div class="info-item">
-							<h4><a href="#">Оценка бизнеса и предприятий</a></h4>
-							<p>Профессиональная оценка бизнес-активов предприятия</p>
+							<h4><a href="#">Обработка данных</a></h4>
+							<p>Обработка, систематизация и введение данных в бухгалтерскую программу</p>
 						</div>
 					</div>
 					<div class="col-sm-4 info-item-wrap">
 						<div class="info-item">
-							<h4><a href="#">Оценка недвижимости</a></h4>
-							<p>Профессиональная оценка жилого и нежилого имущества</p>
+							<h4><a href="#">Расчеты</a></h4>
+							<p>Расчет заработной платы и налогов</p>
 						</div>
 					</div>
 
 					<div class="col-sm-4 info-item-wrap">
 						<div class="info-item">
-							<h4><a href="#">Оценка машин и оборудования</a></h4>
-							<p>Профессиональная оценка машин и оборудования для бизнеса</p>
+							<h4><a href="#">Формирование отчетности</a></h4>
+							<p>Формирование финансового результата предприятия</p>
 						</div>
 					</div>
 
@@ -362,27 +362,27 @@
 
 					<div class="col-sm-4 info-item-wrap">
 						<div class="info-item">
-							<h4><a href="#">Оценка инвестиционных проектов</a></h4>
-							<p>независимая оценка бизнес проектов любого направления</p>
+							<h4><a href="#">Налоговая отчетность</a></h4>
+							<p>Оформление и подача бухгалтерской и налоговой отчетности в соответствующие</p>
 						</div>
 					</div>
 
 					<div class="col-sm-4 info-item-wrap">
 						<div class="info-item">
-							<h4><a href="#">Оценка ценных бумаг</a></h4>
-							<p>Определение рыночной стоимости ценных бумаг и документов</p>
+							<h4><a href="#">Консультирование организаций</a></h4>
+							<p>Консультирование по вопроса оптимизации финансовой функции и бухгалтерскому учету</p>
 						</div>
 					</div>
 					<div class="col-sm-4 info-item-wrap">
 						<div class="info-item">
-							<h4><a href="#">Оценка бизнеса и предприятий</a></h4>
-							<p>Профессиональная оценка бизнес-активов предприятия</p>
+							<h4><a href="#">Помощь в подборе персонала</a></h4>
+							<p>Помощь в подборе персонала в отдел бухгалтерского и налогового учета</p>
 						</div>
 					</div>
 					<div class="col-sm-4 info-item-wrap">
 						<div class="info-item">
-							<h4><a href="#">Оценка недвижимости</a></h4>
-							<p>Профессиональная оценка жилого и нежилого имущества</p>
+							<h4><a href="#">Восстановление бухгалтерского учета</a></h4>
+							<p>Восстановление функционирования предприятия и бухгалтерского учета</p>
 						</div>
 					</div>
 
@@ -395,6 +395,48 @@
 		</div>
 
 	</section>
+
+	<section class="homesect s_gray section_4">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="section-head">
+						<h2>ПРЕИМУЩЕСТВА ARMATA FINANCICAL GROUP</h2>
+						<p><strong>Компания AFG</strong> поддерживает российские и иностранные компании, работающие на отечественном рынке в решении задач экономического роста, защиты своих интересов, управления текущей деятельностью. Помогает создавать системы владения активами, устанавливает коммуникации с новыми партнерами и рынками, организует сделки и привлекает капиталы.</p>
+						<h3>ПРИВЛЕКАТЕЛЬНЫЕ УСЛОВИЯ СОТРУДНИЧЕСТВА</h3>
+					</div>	
+				</div>
+			</div>
+		</div>
+		<div class="section-pb">
+			<div class="container">
+				<div class="row">
+					<div class="cards">
+						<div class="card card-off">
+							<div class="card-icon img-wrap"><img src="img/icons/section_4/1.svg" alt="Sales"></div>
+							<h4>СКИДКИ</h4>
+							<p>Предоставляем всем нашим клиентам уникальную возможность получить скидку <strong>50%</strong> на все услуги</p>
+						</div>
+						<div class="card card-off">
+							<div class="card-icon img-wrap"><img src="img/icons/section_4/2.svg" alt="Team"></div>
+							<h4>КОМАНДА</h4>
+							<p>У нас большой опыт работы в крупнейших консалтинговых компаниях</p>
+						</div>
+						<div class="card card-off">
+							<div class="card-icon img-wrap"><img src="img/icons/section_4/3.svg" alt="Time"></div>
+							<h4>СКОРОСТЬ</h4>
+							<p>Приступаем к выполнению обязательст в день обращения в нашу компанию</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="section-bottom">
+			<a href="#" class="buttons">Обратится к нам</a>
+		</div>
+
+	</section>	
 
 	<div class="hidden"></div>
 
