--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
 					<div class="section-head">
-						<h2>Независимая оценка имущества</h2>
-						<p><strong>Определение рыночной стоимости</strong> любого актива, или <a href="#">оценка</a> - это первый этап всех рыночных отношений. Оценка заключается в объективном анализе объекта с целью придания ему стоимостных характеристик выраженых в едином денежном эквиваленте.</p>
+						<h2>БУХГАЛТЕРСКИЕ УСЛУГИ</h2>
+						<p><strong>Бухгалтерский учёт</strong> это строго структурированная система сбора, регистрации и систематизации информации в денежном выражении о состоянии имущества, обязательств организации и их изменениях путём сплошного, непрерывного и документального учёта всех хозяйственных и экономических операций.</p>
 					</div>	
 				</div>
 			</div>
@@ -436,6 +436,64 @@
 			<a href="#" class="buttons">Обратится к нам</a>
 		</div>
 
+	</section>
+	<section class="homesect s_dark section_5">
+		
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="section-head">
+						<h2>КАК МЫ РАБОТАЕМ</h2>
+						
+					</div>	
+				</div>
+			</div>
+		</div>	
+			<div class="triangles-container">
+				<div class="container">
+					<div class="row">
+						<div class="tc-item">
+							<div class="tc-content">
+								<img src="img/icons/section_5/1.svg" alt="1">
+								<span>1.</span>Вы оставляете заявку
+							</div>
+							<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 291.01178 129" height="129" width="291.01178" version="1.1" id="tc-svg-0">
+								<path id="path4138" d="M 3.4644996,126.28999 3.1137219,4.0613763 l 240.7182181,0 43.11847,58.7692707 -43.28202,63.461773 z" style="fill:#f39f18;fill-opacity:0;stroke-opacity:0;stroke:#f39f18;stroke-width:5px" />
+							</svg>
+						</div>
+						<div class="tc-item">
+							<div class="tc-content">
+								<img src="img/icons/section_5/2.svg" alt="1">
+								<span>2.</span>Подписываем договор
+							</div>
+							<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 291.01178 129" height="129" width="291.01178" version="1.1" id="tc-svg-1">
+								<path id="path4138-3" d="M 3.3821314,126.02828 46.475601,62.999427 3.0313514,3.799673 l 240.7182186,0 43.11847,58.769271 -43.28202,63.461766 z" style="fill:#f39f18;fill-opacity:0;stroke-opacity:0;stroke:#f39f18;stroke-width:5px" />
+							</svg>
+						</div>
+						<div class="tc-item">
+							<div class="tc-content">
+								<img src="img/icons/section_5/3.svg" alt="1">
+								<span>3.</span>Мы проводим оценку
+							</div>
+							<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 291.01178 129" height="129" width="291.01178" version="1.1" id="tc-svg-2">
+								<path id="path4138-3" d="M 3.3821314,126.02828 46.475601,62.999427 3.0313514,3.799673 l 240.7182186,0 43.11847,58.769271 -43.28202,63.461766 z" style="fill:#f39f18;fill-opacity:0;stroke-opacity:0;stroke:#f39f18;stroke-width:5px" />
+							</svg>
+						</div>
+						<div class="tc-item">
+							<div class="tc-content">
+								<img src="img/icons/section_5/4.svg" alt="1">
+								<span>4.</span>Вы получаете отчет
+							</div>
+							<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 291.01178 129" height="129" width="291.01178" version="1.1" id="tc-svg-3">
+								<path id="path4138-3" d="M 3.3821314,126.02828 46.475601,62.999427 3.0313514,3.799673 l 240.7182186,0 43.11847,58.769271 -43.28202,63.461766 z" style="fill:#f39f18;fill-opacity:0;stroke-opacity:0;stroke:#f39f18;stroke-width:5px" />
+							</svg>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section-bottom">
+				<a href="#" class="buttons">Оставить заявку</a>
+			</div>
 	</section>	
 
 	<div class="hidden"></div>
@@ -472,6 +530,7 @@
 	{"src" : "libs/animate/animate-css.js", "async" : false},
 	{"src" : "libs/plugins-scroll/plugins-scroll.js", "async" : false},
 	{"src" : "libs/equalHeight/jquery.equalheights.min.js", "async" : false},
+	{"src" : "libs/drawsvg/drawfillsvg.min.js", "async" : false},
 	{"src" : "js/common.js", "async" : false}
 	]};!function(t,n,r){"use strict";var c=function(t){if("[object Array]"!==Object.prototype.toString.call(t))return!1;for(var r=0;r<t.length;r++){var c=n.createElement("script"),e=t[r];c.src=e.src,c.async=e.async,n.body.appendChild(c)}return!0};t.addEventListener?t.addEventListener("load",function(){c(r.scripts);},!1):t.attachEvent?t.attachEvent("onload",function(){c(r.scripts)}):t.onload=function(){c(r.scripts)}}(window,document,scr);
 </script>
