--- a/index.html
+++ b/index.html
@@ -496,6 +496,47 @@
 			</div>
 	</section>	
 
+	<section class="homesect section_6">
+		
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="section-head">
+						<h2>С КЕМ МОЖНО СВЯЗАТЬСЯ ЧЕРЕЗ САЙТ</h2>
+						<p>Свяжитесь с одним из сотрудников и получите консультацию по работе с нашей компанией</p>
+					</div>	
+				</div>
+			</div>
+		</div>
+		<div class="section-pb">
+			<div class="container">
+				<div class="row">
+					<div class="teams">
+						<div class="team team-off">
+							<div class="card-icon img-wrap"><img src="img/team/1.jpg" alt="STeam"></div>
+							<h4>Евгений Александрович</h4>
+							<p>Директор компании</p>
+							<div class="team-phone">+7 929 568 98 98</div>
+						</div>
+						<div class="team team-off">
+							<div class="card-icon img-wrap"><img src="img/team/2.jpg" alt="Team"></div>
+							<h4>Виталий Дое</h4>
+							<p>Менеджер продаж</p>
+							<div class="team-phone">+7 929 568 98 98</div>
+						</div>
+						<div class="team team-off">
+							<div class="card-icon img-wrap"><img src="img/team/3.jpg" alt="Team"></div>
+							<h4>Екатерина</h4>
+							<p>Старший менеджер</p>
+							<div class="team-phone">+7 929 568 98 98</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</section>	
+
 	<div class="hidden"></div>
 
 	<!--[if lt IE 9]>
