--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
 	<!-- Header CSS (First Sections of Website: paste after release from _header.min.css here) -->
 	<style></style>
 
-	<!-- Fonts Loader from _fonts.css (HTML5 LocalStorage) -->
-	<script>!function(){function e(e,t,n){e.addEventListener?e.addEventListener(t,n,!1):e.attachEvent&&e.attachEvent("on"+t,n)}function t(e){return window.localStorage&&localStorage.font_css_cache&&localStorage.font_css_cache_file===e}function n(){if(window.localStorage&&window.XMLHttpRequest)if(t(o))a(localStorage.font_css_cache);else{var n=new XMLHttpRequest;n.open("GET",o,!0),e(n,"load",function(){4===n.readyState&&(a(n.responseText),localStorage.font_css_cache=n.responseText,localStorage.font_css_cache_file=o)}),n.send()}else{var c=document.createElement("link");c.href=o,c.rel="stylesheet",c.type="text/css",document.getElementsByTagName("head")[0].appendChild(c),document.cookie="font_css_cache"}}function a(e){var t=document.createElement("style");t.innerHTML=e,document.getElementsByTagName("head")[0].appendChild(t)}var o="_fonts.min.css";window.localStorage&&localStorage.font_css_cache||document.cookie.indexOf("font_css_cache")>-1?n():e(window,"load",n)}();</script>
-	
-	<!-- Load CSS Compilled without JS -->
-	<noscript>
-		<link rel="stylesheet" href="_header.min.css">
-		<link rel="stylesheet" href="_main.min.css">
-	</noscript>
-
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -33,6 +24,8 @@
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
+	<link rel="stylesheet" href="_header.min.css">
+	<link rel="stylesheet" href="_main.min.css">
 
 </head>
 
@@ -512,6 +505,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="teams">
+
 						<div class="team team-off">
 							<div class="card-icon img-wrap"><img src="img/team/1.jpg" alt="STeam"></div>
 							<h4>Евгений Александрович</h4>
@@ -535,7 +529,26 @@
 			</div>
 		</div>
 
-	</section>	
+	</sectionr>	
+
+		<section class="homesect s_gray section_4">
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<div class="section-head">
+						<h2>ПРЕИМУЩЕСТВА ARMATA FINANCICAL GROUP</h2>
+						<p><strong>Компания AFG</strong> поддерживает российские и иностранные компании, работающие на отечественном рынке в решении задач экономического роста, защиты своих интересов, управления текущей деятельностью. Помогает создавать системы владения активами, устанавливает коммуникации с новыми партнерами и рынками, организует сделки и привлекает капиталы.</p>
+						<h3>ПРИВЛЕКАТЕЛЬНЫЕ УСЛОВИЯ СОТРУДНИЧЕСТВА</h3>
+					</div>	
+				</div>
+			</div>
+		</div>
+		<div class="section-pb"></div>
+		<div class="section-bottom">
+			<a href="#" class="buttons">Оставить заявку</a>
+		</div>
+		</section>
 
 	<div class="hidden"></div>
 
@@ -546,22 +559,6 @@
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
 
-<!-- Load CSS -->
-<script>
-
-	//Load Libs CSS
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="libs/animate/animate.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-	//Header Styles (compress & paste to header after release)
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="_header.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
-	
-	//User Styles + Media Queries
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="_main.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-</script>
 
 <!-- Load Scripts -->
 <script>var scr = {"scripts":[
@@ -573,7 +570,6 @@
 	{"src" : "libs/equalHeight/jquery.equalheights.min.js", "async" : false},
 	{"src" : "libs/drawsvg/drawfillsvg.min.js", "async" : false},
 	{"src" : "js/common.js", "async" : false}
-	]};!function(t,n,r){"use strict";var c=function(t){if("[object Array]"!==Object.prototype.toString.call(t))return!1;for(var r=0;r<t.length;r++){var c=n.createElement("script"),e=t[r];c.src=e.src,c.async=e.async,n.body.appendChild(c)}return!0};t.addEventListener?t.addEventListener("load",function(){c(r.scripts);},!1):t.attachEvent?t.attachEvent("onload",function(){c(r.scripts)}):t.onload=function(){c(r.scripts)}}(window,document,scr);
 </script>
 
 </body>
