--- a/index.html
+++ b/index.html
@@ -561,16 +561,16 @@
 
 
 <!-- Load Scripts -->
-<script>var scr = {"scripts":[
-	{"src" : "libs/modernizr/modernizr.js", "async" : false},
-	{"src" : "libs/jquery/jquery-1.11.2.min.js", "async" : false},
-	{"src" : "libs/waypoints/waypoints.min.js", "async" : false},
-	{"src" : "libs/animate/animate-css.js", "async" : false},
-	{"src" : "libs/plugins-scroll/plugins-scroll.js", "async" : false},
-	{"src" : "libs/equalHeight/jquery.equalheights.min.js", "async" : false},
-	{"src" : "libs/drawsvg/drawfillsvg.min.js", "async" : false},
-	{"src" : "js/common.js", "async" : false}
-</script>
+
+	<script src="libs/modernizr/modernizr.js"></script>
+	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
+	<script src="libs/waypoints/waypoints.min.js"></script>
+	<script src="libs/animate/animate-css.js"></script>
+	<script src="libs/plugins-scroll/plugins-scroll.js"></script>
+	<script src="libs/equalHeight/jquery.equalheights.min.js"></script>
+	<script src="libs/drawsvg/drawfillsvg.min.js"></script>
+	<script src="js/common.js"></script>
+
 
 </body>
 </html>
