--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- Load CSS Compilled without JS -->
 	<noscript>
 		<!-- <link rel="stylesheet" href="_header.min.css"> -->
-		<!-- <link rel="stylesheet" href="_main.min.css"> -->
+		<link rel="stylesheet" href="_main.min.css">
 	</noscript> 
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +34,7 @@
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
-
+	
 </head>
 
 <body>
