--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 	<!-- Load CSS -->
 <script>
 
-	//Load Libs CSS
+	//Load Libs CSS//
 	var ms=document.createElement("link");ms.rel="stylesheet";
 	ms.href="libs/animate/animate.css";document.getElementsByTagName("head")[0].appendChild(ms);
 
