--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
-	<link rel="stylesheet" href="main.css">
 
 </head>
 
@@ -708,19 +707,36 @@
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
 
+<!-- Load CSS -->
+<script>
+
+	//Load Libs CSS
+	var ms=document.createElement("link");ms.rel="stylesheet";
+	ms.href="libs/animate/animate.css";document.getElementsByTagName("head")[0].appendChild(ms);
+
+	//Header Styles (compress & paste to header after release)
+	//var ms=document.createElement("link");ms.rel="stylesheet";
+	//ms.href="_header.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
+	
+	//User Styles + Media Queries
+	var ms=document.createElement("link");ms.rel="stylesheet";
+	ms.href="main.css";document.getElementsByTagName("head")[0].appendChild(ms);
+
+</script>
+
 <!-- Load Scripts -->
-
-	<script src="libs/modernizr/modernizr.js"></script>
-	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
-	<script src="libs/waypoints/waypoints.min.js"></script>
-	<script src="libs/animate/animate-css.js"></script>
-	<script src="libs/plugins-scroll/plugins-scroll.js"></script>
-	<script src="libs/equalHeight/jquery.equalheights.min.js"></script>
-	<script src="libs/drawsvg/drawfillsvg.min.js"></script>
-	<script src="libs/Magnific-Popup/jquery.magnific-popup.min.js"></script>
-	<script src="libs/owl/owl.carousel.min.js"></script>
-	<script src="js/common.js"></script>
-
+<script>var scr = {"scripts":[
+	{"src" : "libs/modernizr/modernizr.js", "async" : false},
+	{"src" : "libs/jquery/jquery-1.11.2.min.js", "async" : false},
+	{"src" : "libs/waypoints/waypoints.min.js", "async" : false},
+	{"src" : "libs/animate/animate-css.js", "async" : false},
+	{"src" : "libs/plugins-scroll/plugins-scroll.js", "async" : false},
+	{"src" : "libs/equalHeight/jquery.equalheights.min.js", "async" : false},
+	{"src" : "libs/drawsvg/drawfillsvg.min.js", "async" : false},
+	{"src" : "libs/Magnific-Popup/jquery.magnific-popup.min.js", "async" : false},
+	{"src" : "libs/owl/owl.carousel.min.js", "async" : false},
+	{"src" : "js/common.js", "async" : false}
+</script>
 
 </body>
 </html>
