--- a/index.html
+++ b/index.html
@@ -725,18 +725,18 @@
 </script>
 
 <!-- Load Scripts -->
-<script>var scr = {"scripts":[
-	{"src" : "libs/modernizr/modernizr.js", "async" : false},
-	{"src" : "libs/jquery/jquery-1.11.2.min.js", "async" : false},
-	{"src" : "libs/waypoints/waypoints.min.js", "async" : false},
-	{"src" : "libs/animate/animate-css.js", "async" : false},
-	{"src" : "libs/plugins-scroll/plugins-scroll.js", "async" : false},
-	{"src" : "libs/equalHeight/jquery.equalheights.min.js", "async" : false},
-	{"src" : "libs/drawsvg/drawfillsvg.min.js", "async" : false},
-	{"src" : "libs/Magnific-Popup/jquery.magnific-popup.min.js", "async" : false},
-	{"src" : "libs/owl/owl.carousel.min.js", "async" : false},
-	{"src" : "js/common.js", "async" : false}
-</script>
+
+	<script src="libs/modernizr/modernizr.js", "async"></script> 
+	<script src="libs/jquery/jquery-1.11.2.min.js", "async"></script> 
+	<script src="libs/waypoints/waypoints.min.js", "async"></script> 
+	<script src="libs/animate/animate-css.js", "async"></script> 
+	<script src="libs/plugins-scroll/plugins-scroll.js", "async"></script>
+	<script src="libs/equalHeight/jquery.equalheights.min.js", "async"></script> 
+	<script src="libs/drawsvg/drawfillsvg.min.js", "async"></script> 
+	<script src="libs/Magnific-Popup/jquery.magnific-popup.min.js", "async"></script>
+	<script src="libs/owl/owl.carousel.min.js", "async"></script> 
+	<script src="js/common.js", "async"></script>
+
 
 </body>
 </html>
