--- a/index_3.html
+++ b/index_3.html
@@ -163,11 +163,11 @@
 			<p>Оставьте заявку и мы свяжемся с вами в течение 15 минут в рабочее вермя с 10:00 до 18:00 с пт-пт.</p>
 			<label>
 				<span>Ваше имя:</span>
-				<input type="text" name="name" required>
+				<input type="text" name="name" required />
 			</label>
 			<label>
 				<span>Ваш телефон:</span>
-				<input type="text" name="phone" required>
+				<input type="text" name="phone" required />
 			</label>
 			<div class="button-wrap">
 				<button class="buttons">Отправить</button>
@@ -186,7 +186,7 @@
 <!-- Load Scripts -->
 
 	<script src="libs/modernizr/modernizr.js", "async"></script> 
-	<script src="libs/jquery/jquery-1.11.1.min.js", "async"></script> 
+	<script src="libs/jquery/jquery-1.11.2.min.js", "async"></script> 
 	<script src="libs/waypoints/waypoints.min.js", "async"></script> 
 	<script src="libs/animate/animate-css.js", "async"></script> 
 	<script src="libs/plugins-scroll/plugins-scroll.js", "async"></script>
